ajout twitter card + correction bugs js

--- a/assets/style.css
+++ b/assets/style.css
@@ -245,7 +245,13 @@ input[type="submit"] {
 	background-color: #BEB45A;
 	padding: .5em 1em
 }
-
+#shopinfo p {
+	padding-top: 25px;
+	text-align: center;
+}
+.nav-link {
+	cursor: pointer;
+}
 @media all and (max-width: 1180px) {
 	.picture {
 		flex : 2;
